--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -182,8 +182,8 @@
   "imported": "导入完成",
   "mirrorTip": "镜像数据库，所有数据更新会同步到其他所有镜像中",
   "includeTime": "具体时间",
-  "accountSupport1": "自 2020 年 8 月 31 日第一次公开发版以来，思源笔记已累计发版 661 次，解决用户需求与反馈 11877 次，提交代码 14796 次，背后无数次的辛勤付出与长期坚持不懈的更新都离不开您的支持与反馈。",
-  "accountSupport2": "您的支持与反馈能够让思源笔记更好地开发与发展下去，我们会一直与用户做朋友，用心做好产品，为您提供更好的知识管理体验。非常感谢您的支持！",
+  "accountSupport1": "自 2020 年 8 月 31 日第一次公开发版以来，沈同学的笔记已累计发版 661 次，解决用户需求与反馈 11877 次，提交代码 14796 次，背后无数次的辛勤付出与长期坚持不懈的更新都离不开您的支持与反馈。",
+  "accountSupport2": "您的支持与反馈能够让沈同学的笔记更好地开发与发展下去，我们会一直与用户做朋友，用心做好产品，为您提供更好的知识管理体验。非常感谢您的支持！",
   "goToTab1": "跳转到第一个页签",
   "goToTab2": "跳转到第二个页签",
   "goToTab3": "跳转到第三个页签",
@@ -322,7 +322,7 @@
   "bazaarUserReport": "用户举报",
   "bazaarUserReportTip": "如果你发现集市包存在恶意代码或者安全问题，请向我们反馈",
   "bazaarTrust1": "一旦选择信任集市后就无法关闭，如果你已经安装了包含恶意代码的集市包，请在文件系统上手动删除它",
-  "bazaarTrust2": "免责声明：详见思源笔记所使用的开源许可证 AGPLv3 中的相关条款",
+  "bazaarTrust2": "免责声明：详见沈同学的笔记所使用的开源许可证 AGPLv3 中的相关条款",
   "pinTableHead": "固定表头",
   "unpinTableHead": "取消固定表头",
   "enablePluginTip": "现在需要启用该插件吗？后续可以在 [已下载 - 插件] 中进行启用、禁用或者卸载",
@@ -350,7 +350,7 @@
   "reOCR": "重新 OCR",
   "continueReview1": "继续复习",
   "continueReview2": "还有 <code class='fn__code'>${count}</code> 张卡片待复习，是否继续？",
-  "whatsNewInSiYuan": "思源笔记最新变化",
+  "whatsNewInSiYuan": "沈同学的笔记最新变化",
   "returnDesktop": "再按一次返回桌面，如需退出请使用右侧栏面板中的 [退出应用]",
   "enterNew": "回车创建",
   "enterNewTip": "搜索结果为空，回车创建新文档",
@@ -478,7 +478,7 @@
   "syncThirdPartyProviderS3Intro": "当前选择的是 Amazon S3 协议兼容的第三方云端存储服务（比如<a href=\"https://s.qiniu.com/VbQfeu\" target=\"_blank\">七牛云</a>、<a href=\"https://www.aliyun.com/product/oss?userCode=yqovuas2\" target=\"_blank\">阿里云 OSS</a>、<a href=\"https://www.cloudflare.com/\" target=\"_blank\">Cloudflare R2</a>）",
   "syncThirdPartyProviderWebDAVIntro": "当前选择的是 WebDAV 协议的第三方云端存储服务。由于该协议性能较差且稳定性不足，建议优先选择 S3 服务",
   "syncThirdPartyProviderLocalIntro": "当前选择的是本地文件系统提供的存储服务。请在 <code class='fn__code'>Endpoint</code> 字段中输入本地文件夹的完整路径",
-  "syncThirdPartyProviderTip": "在使用该特性前，请注意第三方云端存储服务的技术限制和计费项目等条款：<div class=\"b3-label__text\"><ul class='fn__list'><li>接口调用频率、带宽等技术限制</li><li>存储空间和流量等计费项目</li><li>使用条款和可用性保障等条款</li></ul></div><div class='fn__hr'></div>免责声明：详见思源笔记所使用的开源许可证 AGPLv3 中的相关条款",
+  "syncThirdPartyProviderTip": "在使用该特性前，请注意第三方云端存储服务的技术限制和计费项目等条款：<div class=\"b3-label__text\"><ul class='fn__list'><li>接口调用频率、带宽等技术限制</li><li>存储空间和流量等计费项目</li><li>使用条款和可用性保障等条款</li></ul></div><div class='fn__hr'></div>免责声明：详见沈同学的笔记所使用的开源许可证 AGPLv3 中的相关条款",
   "syncProvider": "云端存储服务提供商",
   "syncProviderTip": "选择后将使用该提供商的云端存储服务实现云端同步和备份功能",
   "confirmReset": "确定将所有快捷键都恢复为默认设置？",
@@ -939,8 +939,8 @@
   "useDefault": "使用默认程序打开",
   "previous": "上一个",
   "next": "下一个",
-  "kernelFault0": "思源笔记遇到了一点问题...",
-  "kernelFault1": "你的数据应该是安全的，请检查网络连接和内核进程是否正常，然后重新启动思源笔记",
+  "kernelFault0": "沈同学的笔记遇到了一点问题...",
+  "kernelFault1": "你的数据应该是安全的，请检查网络连接和内核进程是否正常，然后重新启动沈同学的笔记",
   "kernelFault2": "如果仍然出现该问题，请在<a href=\"https://ld246.com/article/1649901726096\" target=\"_blank\">这里</a>寻求帮助或者报告缺陷",
   "fontSize": "字号",
   "fontSizeTip": "字号默认为 <code class='fn__code'>16</code>，该设置影响编辑器和导出 PDF/HTML 字体大小显示",
@@ -1013,14 +1013,14 @@
   "dataHistory": "数据历史",
   "quitApp": "是否退出？",
   "reset": "重置",
-  "siyuanNote": "思源笔记",
+  "siyuanNote": "沈同学的笔记",
   "resetLayout": "恢复默认窗口",
   "tag": "标签",
   "twoFactorCaptcha": "两步验证验证码",
   "captcha": "验证码",
   "register": "注册新账号",
   "login": "登录",
-  "accountTip": "我已阅读并同意<a target='_blank' href='https://b3log.org/siyuan/privacy.html'>思源笔记隐私政策</a>",
+  "accountTip": "我已阅读并同意<a target='_blank' href='https://b3log.org/siyuan/privacy.html'>沈同学的笔记隐私政策</a>",
   "forgetPassword": "忘记密码",
   "accountName": "用户名/邮箱",
   "account": "账号",
@@ -1502,19 +1502,19 @@
     "169": "正在上传数据仓库文件 %v/%v",
     "170": "正在上传数据仓库分块 %v/%v",
     "171": "正在上传数据仓库引用 %s",
-    "172": "如果你忘记了授权码，请在<a href=\"https://ld246.com/article/1649901726096\" target=\"_blank\">这里</a>寻求帮助",
+    "172": " ",
     "173": "请输入访问授权码",
     "174": "解锁访问",
     "175": "请输入验证码",
-    "176": "思源笔记",
+    "176": "沈同学的笔记",
     "177": "退出应用",
-    "178": "访问授权 - 思源笔记",
+    "178": "访问授权 - 沈同学的笔记",
     "179": "磁盘空间可能不足，建议保持工作空间所在磁盘可用空间为 data 大小的 2 倍以上",
     "180": "不存在符合条件的内容块",
     "181": "已分享文档到社区，<a href=\"%s\" target=\"_blank\">点击查看</a>",
     "182": "正在分享文档，请稍等...",
     "183": "正在校验索引文档树 [%d/%d %s]",
-    "184": "由<a href=\"https://b3log.org/siyuan\" target=\"_blank\">思源笔记</a>强力驱动",
+    "184": "由 沈同学的笔记 强力驱动",
     "185": "索引校验完毕",
     "186": "正在锁定云端同步目录",
     "187": "正在解锁云端同步目录",
